# evomarket

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
.hypothesis/constants/: 0d3d64bd047a619d  1a979cceaa2d09ed  239c1d795a9b7ca8  4df0c45a8056a444  8551a77a7a46656e  9706cfd1127183fe  a51dee57f7ef2fc6  afc209a2e942b633  c053788e429bcc86  c869483058f3d796  d4128719bc09b278  da39a3ee5e6b4b0d  e5b09f9ad1551db0  f933a8f37b47b7b5
configs/: config_haiku_large.json  config_large.json  config_llm_test.json  config_mixed16.json  config_mixed_test.json  config_trinity16.json
docs/: 00-implementation-plan.md
docs/brainstorm/: design-spec.md  future-work.md  gap-solutions.md
docs/proposals/: 01-core-data-models.md  02-action-system.md  03-npc-economy.md  04-trading-system.md  05-communication-system.md  06-inheritance-system.md  07-tick-engine.md  08-simulation-runner.md
evomarket/: __main__.py  cli.py
openspec/: project.md
tests/: conftest.py  test_action_parser.py  test_actions.py  test_agent.py  test_agents_base.py  test_cli.py  test_communication.py  test_config.py  test_economy.py  test_engine_economy.py  test_event_logging.py  test_heuristic_agents.py  test_inheritance.py  test_invariants.py  test_mixed_agent_factory.py  test_npc_snapshots.py  test_observation.py  test_prompt_renderer.py  test_random_agent.py  test_runner.py  test_spatial_graph.py  test_spawning.py  test_tick.py  test_time_series_panel.py  test_trading.py  test_viz_agent_trajectories.py  test_world.py
visualization/: app.py  common.py  data.py  registry.py
(+124 files in other folders)
