[project]
name = "evomarket"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hypothesis>=6.151.9",
    "networkx>=3.4",
    "pandas>=2.2",
    "plotly>=6.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
    "streamlit>=1.45",
]
